2009-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.4.0

2009-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added utf8.torrent to EXTRA_DIST
	* test/Makefile.am

2009-05-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed docs of aria2.addMetalink xml-rpc method.
	* doc/aria2c.1.txt

2009-05-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added Slovak translation. Updated Ukrainian and Brazilian
	Portuguese translation. Thanks to all translators.
	* po/sk.po
	* po/uk.po
	* po/pt_BR.po
	* po/LINGUAS

2009-05-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test case for XmlRpcProcessor to fail to parse malformed
	document.
	* test/XmlRpcRequestProcessorTest.cc

2009-05-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed *.gmo files in po because they are generated on 'make
	dist'
	* po/*.gmo

2009-05-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented max-concurrent-downloads of changeGlobalOption method
	in man page.
	* doc/aria2c.1.txt

2009-05-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added max-concurrent-downloads option to changeGlobalOption
	xml-rpc method.  Rewritten loop conditional in
	RequestGroupMan::fillRequestGroupFromReserver().
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethodImpl.cc
	
2009-05-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented position parameter in man page.
	* doc/aria2c.1.txt

2009-05-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added 'position' parameter to addUri, addTorrent and addMetalink
	xml-rpc method.
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethodImpl.cc
	* test/XmlRpcMethodTest.cc

2009-05-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed Peer.cc from compile source list when --disable-bittorrent