@@ -1,3 +1,8 @@
+2009-06-01  Ross Smith II  <aria2spam at smithii dot com>
+
+	Added fork() emulation using CreateProcess() in MinGW
+	* src/RequestGroupMan.cc
+	
 2009-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	* Release 1.4.0
